[gd_scene load_steps=2 format=3 uid="uid://bmr1dlmuibodj"]

[ext_resource type="Script" path="res://menus/pause_menu/inventory_menu/inventory_item.gd" id="1_fghgc"]

[node name="InventoryItem" type="TextureRect"]
expand_mode = 1
stretch_mode = 5
script = ExtResource("1_fghgc")

[node name="StackNumberPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -16.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="StackNumberLabel" type="RichTextLabel" parent="StackNumberPanel"]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "[center]4[/center]"
scroll_active = false
